@@ -1,6 +1,9 @@
 LIST OF CHANGES
 ---------------
 
+ - when using and copying an existing cache directory copy everything (instead of
+   restricting to npg directory)
+
 release 47.0
  - code moved to git repository
 
